Removed Amazon links and inserted subtitle Page Under Construction

--- a/MensExerciseShoes.html
+++ b/MensExerciseShoes.html
@@ -32,10 +32,10 @@
     </script>
     <script>
         if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
-          window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+            window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
         }
-        </script>
-    
+    </script>
+
 
 </head>
 
@@ -99,22 +99,22 @@
 
                 <div class="title-section text-center  mb-5">
                     <h1>Men's Excerise Shoes </h1>
+                    <p class="subtitle">Page Under Construction</p>
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://www.amazon.com/Hoka-Mens-Bondi-Sneaker-White/dp/B0D5FNP43M/ref=sr_1_1?dib=eyJ2IjoiMSJ9.dvdp8woIGAhBVrl4BHP_1mC8wzSozPYywEwimGGp_mZWlJ6lXSiijZxlKOX4VSdascFGbpvPO-_DCRK0vLpjqUBU6qS1DAxmbdpAyGMXpvaykStnwjWcz26dpY0RbYkZq9RjHPMficuDRIPIKmHqp_92m2sWBd76njupoumX5SrT7OMAaqdFS0bmLzJWTXQPJCO8bcvzS0YxDQT16hitA0kyIJFlfFYVsq_O1Gbjm1k9S_dp-pUx0rPZ88TKiCYGXzc-jzwydEDCPsOCP-4z4JVEG7nZEiYySt9hthAKuH2b1tKfNrpoA64dDB4ec_bQm_MrHI_DCgWYfSiKMxpxcwSXzgddIN3Fw5qNZYzXn6cWyzjxgU_6g4yro5LsI7rpzORwLl-kgT28wITQQBWsUc-VwJsoxtskqNv5Ecd0FkrCkagG87Cy1ZSIWIbXCilI.OetWyLUQGxeuElwBX9jmXOlEB2RCXJI9imYuK30fSHw&dib_tag=se&keywords=hoka%2Bmens&qid=1738343928&s=apparel&sr=1-1&th=1"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Hoka Mens Sr. Bondi.jpg" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
+                                <!-- <a href="https://www.amazon.com/Hoka-Mens-Bondi-Sneaker-White/dp/B0D5FNP43M/ref=sr_1_1?dib=eyJ2IjoiMSJ9.dvdp8woIGAhBVrl4BHP_1mC8wzSozPYywEwimGGp_mZWlJ6lXSiijZxlKOX4VSdascFGbpvPO-_DCRK0vLpjqUBU6qS1DAxmbdpAyGMXpvaykStnwjWcz26dpY0RbYkZq9RjHPMficuDRIPIKmHqp_92m2sWBd76njupoumX5SrT7OMAaqdFS0bmLzJWTXQPJCO8bcvzS0YxDQT16hitA0kyIJFlfFYVsq_O1Gbjm1k9S_dp-pUx0rPZ88TKiCYGXzc-jzwydEDCPsOCP-4z4JVEG7nZEiYySt9hthAKuH2b1tKfNrpoA64dDB4ec_bQm_MrHI_DCgWYfSiKMxpxcwSXzgddIN3Fw5qNZYzXn6cWyzjxgU_6g4yro5LsI7rpzORwLl-kgT28wITQQBWsUc-VwJsoxtskqNv5Ecd0FkrCkagG87Cy1ZSIWIbXCilI.OetWyLUQGxeuElwBX9jmXOlEB2RCXJI9imYuK30fSHw&dib_tag=se&keywords=hoka%2Bmens&qid=1738343928&s=apparel&sr=1-1&th=1"
+                                    rel="noopener noreferrer" target="_blank"> -->
+                                <img src="img/Hoka Mens Sr. Bondi.jpg" class="card-img-top"
+                                    alt="Event 1 Image - Description of the event" loading="lazy">
+                                <!-- </a> -->
                                 <div class="card-body text-center">
-                                    <a href="https://www.amazon.com/Hoka-Mens-Bondi-Sneaker-White/dp/B0D5FNP43M/ref=sr_1_1?dib=eyJ2IjoiMSJ9.dvdp8woIGAhBVrl4BHP_1mC8wzSozPYywEwimGGp_mZWlJ6lXSiijZxlKOX4VSdascFGbpvPO-_DCRK0vLpjqUBU6qS1DAxmbdpAyGMXpvaykStnwjWcz26dpY0RbYkZq9RjHPMficuDRIPIKmHqp_92m2sWBd76njupoumX5SrT7OMAaqdFS0bmLzJWTXQPJCO8bcvzS0YxDQT16hitA0kyIJFlfFYVsq_O1Gbjm1k9S_dp-pUx0rPZ88TKiCYGXzc-jzwydEDCPsOCP-4z4JVEG7nZEiYySt9hthAKuH2b1tKfNrpoA64dDB4ec_bQm_MrHI_DCgWYfSiKMxpxcwSXzgddIN3Fw5qNZYzXn6cWyzjxgU_6g4yro5LsI7rpzORwLl-kgT28wITQQBWsUc-VwJsoxtskqNv5Ecd0FkrCkagG87Cy1ZSIWIbXCilI.OetWyLUQGxeuElwBX9jmXOlEB2RCXJI9imYuK30fSHw&dib_tag=se&keywords=hoka%2Bmens&qid=1738343928&s=apparel&sr=1-1&th=1"
+                                    <!-- <a href="https://www.amazon.com/Hoka-Mens-Bondi-Sneaker-White/dp/B0D5FNP43M/ref=sr_1_1?dib=eyJ2IjoiMSJ9.dvdp8woIGAhBVrl4BHP_1mC8wzSozPYywEwimGGp_mZWlJ6lXSiijZxlKOX4VSdascFGbpvPO-_DCRK0vLpjqUBU6qS1DAxmbdpAyGMXpvaykStnwjWcz26dpY0RbYkZq9RjHPMficuDRIPIKmHqp_92m2sWBd76njupoumX5SrT7OMAaqdFS0bmLzJWTXQPJCO8bcvzS0YxDQT16hitA0kyIJFlfFYVsq_O1Gbjm1k9S_dp-pUx0rPZ88TKiCYGXzc-jzwydEDCPsOCP-4z4JVEG7nZEiYySt9hthAKuH2b1tKfNrpoA64dDB4ec_bQm_MrHI_DCgWYfSiKMxpxcwSXzgddIN3Fw5qNZYzXn6cWyzjxgU_6g4yro5LsI7rpzORwLl-kgT28wITQQBWsUc-VwJsoxtskqNv5Ecd0FkrCkagG87Cy1ZSIWIbXCilI.OetWyLUQGxeuElwBX9jmXOlEB2RCXJI9imYuK30fSHw&dib_tag=se&keywords=hoka%2Bmens&qid=1738343928&s=apparel&sr=1-1&th=1"
                                         rel="noopener noreferrer" target="_blank"
-                                        class="btn btn-outline-light btn-primary">HOKA Men's Bondi Sr Sneaker</a>
-                                    <!-- <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">HOKA Men's Bondi Sr Sneaker</a> -->
+                                        class="btn btn-outline-light btn-primary">HOKA Men's Bondi Sr Sneaker</a> -->
                                 </div>
 
                             </div>
@@ -122,16 +122,16 @@
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
 
                             <div class="card">
-                                <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
-                                    rel="noopener noreferrer" target="_blank">
+                                <!-- <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
+                                    rel="noopener noreferrer" target="_blank"> -->
                                     <img src="img/Hoka Mens Gaviota.jpg" class="card-img-top"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
+                                <!-- </a> -->
                                 <div class="card-body text-center">
-                                    <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
+                                    <!-- <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
                                         rel="noopener noreferrer" target="_blank"
                                         class="btn btn-outline-light btn-primary">
-                                        HOKA Men's Gaviota 5 Sneaker</a>
+                                        HOKA Men's Gaviota 5 Sneaker</a> -->
 
                                 </div>
 
@@ -237,17 +237,17 @@
     <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
         if ('serviceWorker' in navigator) {
-          window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/sw.js').then(function(registration) {
-              // Registration was successful
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            }, function(err) {
-              // registration failed :(
-              console.log('ServiceWorker registration failed: ', err);
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/sw.js').then(function (registration) {
+                    // Registration was successful
+                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }, function (err) {
+                    // registration failed :(
+                    console.log('ServiceWorker registration failed: ', err);
+                });
             });
-          });
         }
-      </script>
+    </script>
 
 </body>
 
