--- a/MensCasualShoes.html
+++ b/MensCasualShoes.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <!-- Bootstrap CSS CDN -->
     <link href="bootstrap.min.css" rel="stylesheet">
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -98,41 +98,39 @@
 
                 <div class="title-section text-center  mb-5">
                     <h1>Men's Casual Shoes </h1>
+                    <p class="subtitle">Page Under Construction </p>
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://www.amazon.com/Cole-Haan-Crosscourt-Sneaker-Peacoat/dp/B08CB474QH/ref=sr_1_17?crid=1E060W44L0SBN&dib=eyJ2IjoiMSJ9.0SxbCMzZ3jlDm3K6hNcz3LxRiWVIyYpkprA6dicGpGuiIhASToTSvoYm661eRs0XST2gWCUGZEJsreN6b2CpXjoBhN8RWyw7vISWwICM6LtLJiHmTmmS2RY5JHGolO_BjjaaJTNvzOvi9sPPmeRCWqmGP6UhStpWsGvD_rPZI6QbKFopWuUV_xCN-ISEmBjiEKkQqoP72sffZJ1wGCRU1zzRTpEIuPGRo2N67lI6gFW_-PMV283xHGoCMsFVIg9BQjT85NyOjSUFpVO1YvLx_GTEXd4FIgc2GC244gCV4xz9cKi8vhdhUMEobO2elfF9_2tDVaZhSJ6kCIU4RAuIFxYAaY5XdfB5q_reg9osFm6v2a8e2JII_wyiU3T-xrgAV3ybIa6gSsjttWZRFxxYULCAC1rZV4W3_jCx4tovqoR7SKlwWzLW3xelWyaqVYp8.R3EDBJYq7nFVyzeiV0sEFXCP9ukviQuPOJ01EOYnfXY&dib_tag=se&keywords=mens+casual+shoes&qid=1738345390&sprefix=mens+casua%2Caps%2C156&sr=8-17"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Cole Haan Men's Grand Crosscourt Modern Tennis Sneaker.jpg"
-                                        class="card-img-top" alt="Event 1 Image - Description of the event"
-                                        loading="lazy">
-                                </a>
+                                <!-- <a href="https://www.amazon.com/Cole-Haan-Crosscourt-Sneaker-Peacoat/dp/B08CB474QH/ref=sr_1_17?crid=1E060W44L0SBN&dib=eyJ2IjoiMSJ9.0SxbCMzZ3jlDm3K6hNcz3LxRiWVIyYpkprA6dicGpGuiIhASToTSvoYm661eRs0XST2gWCUGZEJsreN6b2CpXjoBhN8RWyw7vISWwICM6LtLJiHmTmmS2RY5JHGolO_BjjaaJTNvzOvi9sPPmeRCWqmGP6UhStpWsGvD_rPZI6QbKFopWuUV_xCN-ISEmBjiEKkQqoP72sffZJ1wGCRU1zzRTpEIuPGRo2N67lI6gFW_-PMV283xHGoCMsFVIg9BQjT85NyOjSUFpVO1YvLx_GTEXd4FIgc2GC244gCV4xz9cKi8vhdhUMEobO2elfF9_2tDVaZhSJ6kCIU4RAuIFxYAaY5XdfB5q_reg9osFm6v2a8e2JII_wyiU3T-xrgAV3ybIa6gSsjttWZRFxxYULCAC1rZV4W3_jCx4tovqoR7SKlwWzLW3xelWyaqVYp8.R3EDBJYq7nFVyzeiV0sEFXCP9ukviQuPOJ01EOYnfXY&dib_tag=se&keywords=mens+casual+shoes&qid=1738345390&sprefix=mens+casua%2Caps%2C156&sr=8-17"
+                                    rel="noopener noreferrer" target="_blank"> -->
+                                <img src="img/Cole Haan Men's Grand Crosscourt Modern Tennis Sneaker.jpg"
+                                    class="card-img-top" alt="Event 1 Image - Description of the event" loading="lazy">
+                                <!-- </a> -->
                                 <div class="card-body text-center">
-                                    <a href="https://www.amazon.com/Cole-Haan-Crosscourt-Sneaker-Peacoat/dp/B08CB474QH/ref=sr_1_17?crid=1E060W44L0SBN&dib=eyJ2IjoiMSJ9.0SxbCMzZ3jlDm3K6hNcz3LxRiWVIyYpkprA6dicGpGuiIhASToTSvoYm661eRs0XST2gWCUGZEJsreN6b2CpXjoBhN8RWyw7vISWwICM6LtLJiHmTmmS2RY5JHGolO_BjjaaJTNvzOvi9sPPmeRCWqmGP6UhStpWsGvD_rPZI6QbKFopWuUV_xCN-ISEmBjiEKkQqoP72sffZJ1wGCRU1zzRTpEIuPGRo2N67lI6gFW_-PMV283xHGoCMsFVIg9BQjT85NyOjSUFpVO1YvLx_GTEXd4FIgc2GC244gCV4xz9cKi8vhdhUMEobO2elfF9_2tDVaZhSJ6kCIU4RAuIFxYAaY5XdfB5q_reg9osFm6v2a8e2JII_wyiU3T-xrgAV3ybIa6gSsjttWZRFxxYULCAC1rZV4W3_jCx4tovqoR7SKlwWzLW3xelWyaqVYp8.R3EDBJYq7nFVyzeiV0sEFXCP9ukviQuPOJ01EOYnfXY&dib_tag=se&keywords=mens+casual+shoes&qid=1738345390&sprefix=mens+casua%2Caps%2C156&sr=8-17"
+                                    <!-- <a href="https://www.amazon.com/Cole-Haan-Crosscourt-Sneaker-Peacoat/dp/B08CB474QH/ref=sr_1_17?crid=1E060W44L0SBN&dib=eyJ2IjoiMSJ9.0SxbCMzZ3jlDm3K6hNcz3LxRiWVIyYpkprA6dicGpGuiIhASToTSvoYm661eRs0XST2gWCUGZEJsreN6b2CpXjoBhN8RWyw7vISWwICM6LtLJiHmTmmS2RY5JHGolO_BjjaaJTNvzOvi9sPPmeRCWqmGP6UhStpWsGvD_rPZI6QbKFopWuUV_xCN-ISEmBjiEKkQqoP72sffZJ1wGCRU1zzRTpEIuPGRo2N67lI6gFW_-PMV283xHGoCMsFVIg9BQjT85NyOjSUFpVO1YvLx_GTEXd4FIgc2GC244gCV4xz9cKi8vhdhUMEobO2elfF9_2tDVaZhSJ6kCIU4RAuIFxYAaY5XdfB5q_reg9osFm6v2a8e2JII_wyiU3T-xrgAV3ybIa6gSsjttWZRFxxYULCAC1rZV4W3_jCx4tovqoR7SKlwWzLW3xelWyaqVYp8.R3EDBJYq7nFVyzeiV0sEFXCP9ukviQuPOJ01EOYnfXY&dib_tag=se&keywords=mens+casual+shoes&qid=1738345390&sprefix=mens+casua%2Caps%2C156&sr=8-17"
                                         rel="noopener noreferrer" target="_blank"
                                         class="btn btn-outline-light btn-primary">Cole Haan Men's Grand Crosscourt
-                                        Modern Tennis Sneaker</a>
-                                    <!-- <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">HOKA Men's Bondi Sr Sneaker</a> -->
+                                        Modern Tennis Sneaker</a> -->
                                 </div>
 
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://www.amazon.com/Bruno-Marc-Sneakers-Fashion-SBFS223M/dp/B09QM69GT2/ref=sr_1_49_sspa?crid=3H45ZVXOYVJQS&dib=eyJ2IjoiMSJ9.piWo62YsA-heLCL73HvPQZd2TquU2oHeMvmziBj1nLi13DG7rmHFXygEpEiD-xSHhxhFLMQJ8bDdiirPdg3H0UU0qSHyPR2cvQFl3ioXrkc.yV0A3CCY3PIO7I8B7t6__MZGo59UrvO3KOxFYV8rIDA&dib_tag=se&keywords=bruno+marc+shoes+men&qid=1738345032&sprefix=brunoc+marc%2Caps%2C173&sr=8-49-spons&xpid=deR7GzYcyfbKT&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGZfbmV4dA&psc=1"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Bruno Marc Casual Shoes for Men.jpg" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
+                                <!-- <a href="https://www.amazon.com/Bruno-Marc-Sneakers-Fashion-SBFS223M/dp/B09QM69GT2/ref=sr_1_49_sspa?crid=3H45ZVXOYVJQS&dib=eyJ2IjoiMSJ9.piWo62YsA-heLCL73HvPQZd2TquU2oHeMvmziBj1nLi13DG7rmHFXygEpEiD-xSHhxhFLMQJ8bDdiirPdg3H0UU0qSHyPR2cvQFl3ioXrkc.yV0A3CCY3PIO7I8B7t6__MZGo59UrvO3KOxFYV8rIDA&dib_tag=se&keywords=bruno+marc+shoes+men&qid=1738345032&sprefix=brunoc+marc%2Caps%2C173&sr=8-49-spons&xpid=deR7GzYcyfbKT&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGZfbmV4dA&psc=1"
+                                    rel="noopener noreferrer" target="_blank"> -->
+                                <img src="img/Bruno Marc Casual Shoes for Men.jpg" class="card-img-top"
+                                    alt="Event 1 Image - Description of the event" loading="lazy">
+                                <!-- </a> -->
                                 <div class="card-body text-center">
-                                    <a href="https://www.amazon.com/Bruno-Marc-Sneakers-Fashion-SBFS223M/dp/B09QM69GT2/ref=sr_1_49_sspa?crid=3H45ZVXOYVJQS&dib=eyJ2IjoiMSJ9.piWo62YsA-heLCL73HvPQZd2TquU2oHeMvmziBj1nLi13DG7rmHFXygEpEiD-xSHhxhFLMQJ8bDdiirPdg3H0UU0qSHyPR2cvQFl3ioXrkc.yV0A3CCY3PIO7I8B7t6__MZGo59UrvO3KOxFYV8rIDA&dib_tag=se&keywords=bruno+marc+shoes+men&qid=1738345032&sprefix=brunoc+marc%2Caps%2C173&sr=8-49-spons&xpid=deR7GzYcyfbKT&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGZfbmV4dA&psc=1"
+                                    <!-- <a href="https://www.amazon.com/Bruno-Marc-Sneakers-Fashion-SBFS223M/dp/B09QM69GT2/ref=sr_1_49_sspa?crid=3H45ZVXOYVJQS&dib=eyJ2IjoiMSJ9.piWo62YsA-heLCL73HvPQZd2TquU2oHeMvmziBj1nLi13DG7rmHFXygEpEiD-xSHhxhFLMQJ8bDdiirPdg3H0UU0qSHyPR2cvQFl3ioXrkc.yV0A3CCY3PIO7I8B7t6__MZGo59UrvO3KOxFYV8rIDA&dib_tag=se&keywords=bruno+marc+shoes+men&qid=1738345032&sprefix=brunoc+marc%2Caps%2C173&sr=8-49-spons&xpid=deR7GzYcyfbKT&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGZfbmV4dA&psc=1"
                                         rel="noopener noreferrer" target="_blank"
                                         class="btn btn-outline-light btn-primary">Bruno Marc Men's Casual Dress
-                                        Sneakers</a>
-                                    <!-- <a href="CharityWalks.html" class="btn btn-outline-light btn-primary">HOKA Men's Bondi Sr Sneaker</a> -->
+                                        Sneakers</a> -->
                                 </div>
 
                             </div>
@@ -235,17 +233,17 @@
     <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
         if ('serviceWorker' in navigator) {
-          window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/sw.js').then(function(registration) {
-              // Registration was successful
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            }, function(err) {
-              // registration failed :(
-              console.log('ServiceWorker registration failed: ', err);
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/sw.js').then(function (registration) {
+                    // Registration was successful
+                    console.log('ServiceWorker registration successful with scope: ', registration.scope);
+                }, function (err) {
+                    // registration failed :(
+                    console.log('ServiceWorker registration failed: ', err);
+                });
             });
-          });
         }
-      </script>
+    </script>
 
 </body>
 
