--- a/WomensExerciseShoes.html
+++ b/WomensExerciseShoes.html
@@ -99,37 +99,37 @@
 
                 <div class="title-section text-center  mb-5">
                     <h1>Women's Excerise Shoes </h1>
+                    <p class="subtitle">Page Under Construction</p>
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-                                <a href="https://www.amazon.com/HOKA-ONE-Clifton-Womens-Shoes/dp/B0CWNN22VZ/ref=sr_1_1?crid=K2EE8VIBPB1E&dib=eyJ2IjoiMSJ9.oyR1xdCEiWRO7zaYHHGLcuKA_NIeMwGtJBJvJ8-dRMSJuH1zHgdYZJpSsGiY9MKLWYl3keGiR8wyIAgcZstF3H5uI0Q1Fr8egk01YGVnJVtwX86rvAa5yi3cct5_SPJUfNKe904Zxx_CWKCxsUASnRvyYAeyR4JNjHDfsbxCJyxtC7g4sN7qLrF-pFCrvFmiWvEdAMz0m_AaDSdAK9V9rYp7svCW6oSZo8KJCHtU00iFQNt-Zn7Ygpw0pb8duO7MYStAKwfEZQ8EAJjznBC03k9nQ7XvjM0WoLsHRFMmghyM0fj14lp9w-03akwd_-JVYH19iqJoa3vU6Pa0q0coLkwqxcXJKTs19h3jg1axz-kAtvHRfsWIflNZkNjT-_ddZbMVzYzLY4o3mT6EU2tuuvWhODPwGxIQ9VvZcfC5YFmBZ7nVSBpcM7jGLbg_LLUO.AbLbGVZmn9YmXx9y79UKE82-KyFz9J1bbEpO-uZAOjg&dib_tag=se&keywords=hoka%2Bclifton%2B9%2Bwomens&qid=1738349593&sprefix=hoka%2Bclif%2Caps%2C174&sr=8-1&th=1"
-                                    rel="noopener noreferrer" target="_blank">
+                                <!-- <a href="https://www.amazon.com/HOKA-ONE-Clifton-Womens-Shoes/dp/B0CWNN22VZ/ref=sr_1_1?crid=K2EE8VIBPB1E&dib=eyJ2IjoiMSJ9.oyR1xdCEiWRO7zaYHHGLcuKA_NIeMwGtJBJvJ8-dRMSJuH1zHgdYZJpSsGiY9MKLWYl3keGiR8wyIAgcZstF3H5uI0Q1Fr8egk01YGVnJVtwX86rvAa5yi3cct5_SPJUfNKe904Zxx_CWKCxsUASnRvyYAeyR4JNjHDfsbxCJyxtC7g4sN7qLrF-pFCrvFmiWvEdAMz0m_AaDSdAK9V9rYp7svCW6oSZo8KJCHtU00iFQNt-Zn7Ygpw0pb8duO7MYStAKwfEZQ8EAJjznBC03k9nQ7XvjM0WoLsHRFMmghyM0fj14lp9w-03akwd_-JVYH19iqJoa3vU6Pa0q0coLkwqxcXJKTs19h3jg1axz-kAtvHRfsWIflNZkNjT-_ddZbMVzYzLY4o3mT6EU2tuuvWhODPwGxIQ9VvZcfC5YFmBZ7nVSBpcM7jGLbg_LLUO.AbLbGVZmn9YmXx9y79UKE82-KyFz9J1bbEpO-uZAOjg&dib_tag=se&keywords=hoka%2Bclifton%2B9%2Bwomens&qid=1738349593&sprefix=hoka%2Bclif%2Caps%2C174&sr=8-1&th=1"
+                                    rel="noopener noreferrer" target="_blank"> -->
                                     <img src="img/Hoka Clifton 9 Womens 3 - Copy.jpg" class="card-img-top"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
+                                <!-- </a> -->
                                 <div class="card-body text-center">
-                                    <a href="https://www.amazon.com/HOKA-ONE-Clifton-Womens-Shoes/dp/B0CWNN22VZ/ref=sr_1_1?crid=K2EE8VIBPB1E&dib=eyJ2IjoiMSJ9.oyR1xdCEiWRO7zaYHHGLcuKA_NIeMwGtJBJvJ8-dRMSJuH1zHgdYZJpSsGiY9MKLWYl3keGiR8wyIAgcZstF3H5uI0Q1Fr8egk01YGVnJVtwX86rvAa5yi3cct5_SPJUfNKe904Zxx_CWKCxsUASnRvyYAeyR4JNjHDfsbxCJyxtC7g4sN7qLrF-pFCrvFmiWvEdAMz0m_AaDSdAK9V9rYp7svCW6oSZo8KJCHtU00iFQNt-Zn7Ygpw0pb8duO7MYStAKwfEZQ8EAJjznBC03k9nQ7XvjM0WoLsHRFMmghyM0fj14lp9w-03akwd_-JVYH19iqJoa3vU6Pa0q0coLkwqxcXJKTs19h3jg1axz-kAtvHRfsWIflNZkNjT-_ddZbMVzYzLY4o3mT6EU2tuuvWhODPwGxIQ9VvZcfC5YFmBZ7nVSBpcM7jGLbg_LLUO.AbLbGVZmn9YmXx9y79UKE82-KyFz9J1bbEpO-uZAOjg&dib_tag=se&keywords=hoka%2Bclifton%2B9%2Bwomens&qid=1738349593&sprefix=hoka%2Bclif%2Caps%2C174&sr=8-1&th=1"
+                                    <!-- <a href="https://www.amazon.com/HOKA-ONE-Clifton-Womens-Shoes/dp/B0CWNN22VZ/ref=sr_1_1?crid=K2EE8VIBPB1E&dib=eyJ2IjoiMSJ9.oyR1xdCEiWRO7zaYHHGLcuKA_NIeMwGtJBJvJ8-dRMSJuH1zHgdYZJpSsGiY9MKLWYl3keGiR8wyIAgcZstF3H5uI0Q1Fr8egk01YGVnJVtwX86rvAa5yi3cct5_SPJUfNKe904Zxx_CWKCxsUASnRvyYAeyR4JNjHDfsbxCJyxtC7g4sN7qLrF-pFCrvFmiWvEdAMz0m_AaDSdAK9V9rYp7svCW6oSZo8KJCHtU00iFQNt-Zn7Ygpw0pb8duO7MYStAKwfEZQ8EAJjznBC03k9nQ7XvjM0WoLsHRFMmghyM0fj14lp9w-03akwd_-JVYH19iqJoa3vU6Pa0q0coLkwqxcXJKTs19h3jg1axz-kAtvHRfsWIflNZkNjT-_ddZbMVzYzLY4o3mT6EU2tuuvWhODPwGxIQ9VvZcfC5YFmBZ7nVSBpcM7jGLbg_LLUO.AbLbGVZmn9YmXx9y79UKE82-KyFz9J1bbEpO-uZAOjg&dib_tag=se&keywords=hoka%2Bclifton%2B9%2Bwomens&qid=1738349593&sprefix=hoka%2Bclif%2Caps%2C174&sr=8-1&th=1"
                                         rel="noopener noreferrer" target="_blank"
-                                        class="btn btn-outline-light btn-primary">Hoka Women's Shoe</a>
+                                        class="btn btn-outline-light btn-primary">Hoka Women's Shoe</a> -->
                                 </div>
 
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
-
-                                <a href="https://www.amazon.com/Ryka-Womens-Devotion-Walking-Black/dp/B0BRWFF497/ref=sr_1_5?crid=3NSO5RHC1OVSE&dib=eyJ2IjoiMSJ9.BpKwoKFqnUh9-3R6qeI0zj-_u-4C6I7ydCzocNxNBQyVad9CyDu0x5WADzbftgJ-lu68HSVF7sGZ4mc8Ktn3yEuR97vOTi1ksAjiSkaO7E5R2xesOhExzrQXEjx8pS3Pe_pmqsw4jAq0X-mDY_bull-ALgdplywsuEeA5iI5fts5fLIvpYAExwYx9jNjUsUmapdyvbHcgGQEdU9z2msVodf7Yw_dsoZZcI8GAFhARJOBk1zUAY-QvtWYpN6dRiSnp36q4qnpa6QGsfVcotIPYzLjBcJwIdlo7h-OwI4IftjCaeOLjasF4WiY9hk8XUKNq_AZbhQB3BT0agZCWpad4jaLhdf7pi_4OCr3MdfPK04xk7lZLk0RTbH15sJvRhSAb-SOKQF0go8OnlOciSb5T6iPy_s9KI6JweiqGwpJHqg1p9PjqhdzAFDJRYoslLTJ.YH_RmFOSVtwIB2K-kd70GAQbrg37k_gWijlvkK0dhIk&dib_tag=se&keywords=ryka%2Bwalking%2Bshoes%2Bwomen&qid=1738349874&sprefix=ryka%2Caps%2C175&sr=8-5&th=1"
-                                    rel="noopener noreferrer" target="_blank">
+                                <!-- <a href="https://www.amazon.com/Ryka-Womens-Devotion-Walking-Black/dp/B0BRWFF497/ref=sr_1_5?crid=3NSO5RHC1OVSE&dib=eyJ2IjoiMSJ9.BpKwoKFqnUh9-3R6qeI0zj-_u-4C6I7ydCzocNxNBQyVad9CyDu0x5WADzbftgJ-lu68HSVF7sGZ4mc8Ktn3yEuR97vOTi1ksAjiSkaO7E5R2xesOhExzrQXEjx8pS3Pe_pmqsw4jAq0X-mDY_bull-ALgdplywsuEeA5iI5fts5fLIvpYAExwYx9jNjUsUmapdyvbHcgGQEdU9z2msVodf7Yw_dsoZZcI8GAFhARJOBk1zUAY-QvtWYpN6dRiSnp36q4qnpa6QGsfVcotIPYzLjBcJwIdlo7h-OwI4IftjCaeOLjasF4WiY9hk8XUKNq_AZbhQB3BT0agZCWpad4jaLhdf7pi_4OCr3MdfPK04xk7lZLk0RTbH15sJvRhSAb-SOKQF0go8OnlOciSb5T6iPy_s9KI6JweiqGwpJHqg1p9PjqhdzAFDJRYoslLTJ.YH_RmFOSVtwIB2K-kd70GAQbrg37k_gWijlvkK0dhIk&dib_tag=se&keywords=ryka%2Bwalking%2Bshoes%2Bwomen&qid=1738349874&sprefix=ryka%2Caps%2C175&sr=8-5&th=1"
+                                    rel="noopener noreferrer" target="_blank"> -->
                                     <img src="img/Ryka Womens Shoes.jpg" class="card-img-top mb-4"
                                         alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
+                                <!-- </a> -->
                                 <div class="card-body text-center">
-                                    <a href="https://www.amazon.com/Ryka-Womens-Devotion-Walking-Black/dp/B0BRWFF497/ref=sr_1_5?crid=3NSO5RHC1OVSE&dib=eyJ2IjoiMSJ9.BpKwoKFqnUh9-3R6qeI0zj-_u-4C6I7ydCzocNxNBQyVad9CyDu0x5WADzbftgJ-lu68HSVF7sGZ4mc8Ktn3yEuR97vOTi1ksAjiSkaO7E5R2xesOhExzrQXEjx8pS3Pe_pmqsw4jAq0X-mDY_bull-ALgdplywsuEeA5iI5fts5fLIvpYAExwYx9jNjUsUmapdyvbHcgGQEdU9z2msVodf7Yw_dsoZZcI8GAFhARJOBk1zUAY-QvtWYpN6dRiSnp36q4qnpa6QGsfVcotIPYzLjBcJwIdlo7h-OwI4IftjCaeOLjasF4WiY9hk8XUKNq_AZbhQB3BT0agZCWpad4jaLhdf7pi_4OCr3MdfPK04xk7lZLk0RTbH15sJvRhSAb-SOKQF0go8OnlOciSb5T6iPy_s9KI6JweiqGwpJHqg1p9PjqhdzAFDJRYoslLTJ.YH_RmFOSVtwIB2K-kd70GAQbrg37k_gWijlvkK0dhIk&dib_tag=se&keywords=ryka%2Bwalking%2Bshoes%2Bwomen&qid=1738349874&sprefix=ryka%2Caps%2C175&sr=8-5&th=1"
+                                    <!-- <a href="https://www.amazon.com/Ryka-Womens-Devotion-Walking-Black/dp/B0BRWFF497/ref=sr_1_5?crid=3NSO5RHC1OVSE&dib=eyJ2IjoiMSJ9.BpKwoKFqnUh9-3R6qeI0zj-_u-4C6I7ydCzocNxNBQyVad9CyDu0x5WADzbftgJ-lu68HSVF7sGZ4mc8Ktn3yEuR97vOTi1ksAjiSkaO7E5R2xesOhExzrQXEjx8pS3Pe_pmqsw4jAq0X-mDY_bull-ALgdplywsuEeA5iI5fts5fLIvpYAExwYx9jNjUsUmapdyvbHcgGQEdU9z2msVodf7Yw_dsoZZcI8GAFhARJOBk1zUAY-QvtWYpN6dRiSnp36q4qnpa6QGsfVcotIPYzLjBcJwIdlo7h-OwI4IftjCaeOLjasF4WiY9hk8XUKNq_AZbhQB3BT0agZCWpad4jaLhdf7pi_4OCr3MdfPK04xk7lZLk0RTbH15sJvRhSAb-SOKQF0go8OnlOciSb5T6iPy_s9KI6JweiqGwpJHqg1p9PjqhdzAFDJRYoslLTJ.YH_RmFOSVtwIB2K-kd70GAQbrg37k_gWijlvkK0dhIk&dib_tag=se&keywords=ryka%2Bwalking%2Bshoes%2Bwomen&qid=1738349874&sprefix=ryka%2Caps%2C175&sr=8-5&th=1"
                                         rel="noopener noreferrer" target="_blank"
-                                        class="btn  btn-outline-light btn-primary">Ryka Womens Shoes</a>
+                                        class="btn  btn-outline-light btn-primary">Ryka Womens Shoes</a> -->
                                 </div>
 
                             </div>
