--- a/MensCasualShoes.html
+++ b/MensCasualShoes.html
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
-                            <div class="card mb-3">
+                            <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com" rel="noopener noreferrer" target="_blank">
                                     <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top"
                                         alt="Placeholder Image">
@@ -146,7 +146,7 @@
                                         rel="noopener noreferrer" class="btn btn-sm btn-outline-primary-custom ">Weekend
                                         Sale at The Walking Company</a>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
 
-                <div class="card mb-3">
+                <!-- <div class="card mb-3">
                     <a href="https://www.thewalkingcompany.com" rel="noopener noreferrer" target="_blank">
                         <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top"
                             alt="Placeholder Image">
@@ -163,7 +163,7 @@
                         <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
                             class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- Keeps sidebar space occuppied -->
             </div>
