--- a/MensShoes.html
+++ b/MensShoes.html
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
-                            <div class="card mb-3">
+                            <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com"
                                 rel="noopener noreferrer" target="_blank">
                                 <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
@@ -137,7 +137,7 @@
                                   <a href="https://www.thewalkingcompany.com" target="_blank" rel="noopener noreferrer"
                                     class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
                                 </div>
-                              </div>
+                              </div> -->
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
 
-                <div class="card mb-3">
+                <!-- <div class="card mb-3">
                     <a href="https://www.thewalkingcompany.com"
                     rel="noopener noreferrer" target="_blank">
                     <img src="img//Sale The Walking Co Jan 31 2025.jpg" class="card-img-top" alt="Placeholder Image">
@@ -155,7 +155,7 @@
                         class="btn btn-sm btn-outline-primary-custom ">Weekend Sale at The Walking Company</a>
                     </div>
                   </div>
-                  
+                   -->
                 <!-- Keeps sidebar space occuppied -->
             </div>
         </div>
