--- a/About.html
+++ b/About.html
@@ -8,17 +8,18 @@
   <meta name="referrer" content="no-referrer-when-downgrade">
   <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
   <meta http-equiv="Cache-Control" content="max-age=31536000">  
-    <title>Comfort Shoes - MiamiWalking.com - Miami</title>
+    <title>About - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <!-- Bootstrap CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" />
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=steps" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=steps" />
+
+
 
 
 
@@ -58,37 +59,35 @@
 
 
 
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Shoes.html">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="CharityWalks.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Shoes.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Main Content Section with Sidebars -->
     <div class="container">
@@ -103,44 +102,13 @@
             <div class="col-12 col-lg-8">
 
                 <div class="title-section text-center  mb-5">
-                    <h1>Comfort Shoes </h1>
+                    <h1>About </h1>
+                    <p class="subtitle">Page Under Construction</p>
                 </div>
+
+               
                 <!-- Card Grid -->
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
-                            <div class="card">
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Sketchers Women Slip On.jpg" class="card-img-top mb-4"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
-
-                                <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn btn-outline-light btn-dark">Skechers Women's
-                                        Go Walk Joy Sneaker</a>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
-                            <div class="card">
-
-                                <a href="https://humanebroward.com/event/vca-walk-for-the-animals-2025/"
-                                    rel="noopener noreferrer" target="_blank">
-                                    <img src="img/Madrid Shoe.jpg" class="card-img-top mb-1"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
-                                </a>
-
-                                <div class="card-body text-center">
-                                    <a href="CharityWalks.html" class="btn  btn-outline-light btn-dark">Kizik Shoes:
-                                        Madrid Eco-Knit Slip On </a>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+       
             </div>
             <!-- Right Sidebar -->
             <div class="col-lg-2 d-none d-lg-block">
@@ -187,8 +155,8 @@
                     </address>
                 </div>
 
-                   <!-- Social Media -->
-                   <div class="col-lg-3 col-md-6 mb-4">
+                <!-- Social Media -->
+                <div class="col-lg-3 col-md-6 mb-4">
                     <h5>Follow Us</h5>
                     <div class="d-flex justify-content-start">
                         <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
