--- a/index.html
+++ b/index.html
@@ -60,10 +60,13 @@
             <a class="nav-link" href="Shoes.html">Shoes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">About</a>
+            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Contact</a>
+            <a class="nav-link" href="About.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Contact.html">Contact</a>
           </li>
         </ul>
       </div>
