Switched Shoes News rss feed to Footwear News

--- a/ShoesNews.html
+++ b/ShoesNews.html
@@ -106,7 +106,7 @@
                     <h1>Shoes News </h1>
                 </div>
 
-                <rssapp-wall id="erCemUMtkmmK2RqL"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+                <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
                 <!-- Card Grid -->
        
             </div>
