Moved Rss feed below cards on pages w/ Page Under Construction and inserted new navbar in About.html page

--- a/About.html
+++ b/About.html
@@ -59,35 +59,37 @@
 
 
 
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Shoes.html">Shoes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="CharityWalks.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Shoes.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Shoes.html">Shoes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="About.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
     <!-- Main Content Section with Sidebars -->
     <div class="container">
@@ -105,6 +107,7 @@
                     <h1>About </h1>
                     <p class="subtitle">Page Under Construction</p>
                 </div>
+                <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
 
                
                 <!-- Card Grid -->
