--- a/Contact.html
+++ b/Contact.html
@@ -107,6 +107,7 @@
                     <h1>Contact </h1>
                     <p class="subtitle">Page Under Construction</p>
                 </div>
+                <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
 
                
                 <!-- Card Grid -->
