--- a/WomensExerciseShoes.html
+++ b/WomensExerciseShoes.html
@@ -102,7 +102,7 @@
                 <div class="title-section text-center  mb-5">
                     <h1>Women's Excerise Shoes </h1>
                     <p class="subtitle">Page Under Construction</p>
-                </div>
+                   
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
@@ -136,6 +136,7 @@
 
                             </div>
                         </div>
+                        <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
                             <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com"
