--- a/MensExerciseShoes.html
+++ b/MensExerciseShoes.html
@@ -53,37 +53,37 @@
         </div>
     </header>
 
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Shoes.html">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- Main Content Section with Sidebars -->
     <div class="container">
         <div class="row mt-5">
@@ -100,6 +100,7 @@
                     <h1>Men's Excerise Shoes </h1>
                     <p class="subtitle">Page Under Construction</p>
                 </div>
+
                 <!-- Card Grid -->
                 <div class="container">
                     <div class="row justify-content-center">
@@ -123,21 +124,20 @@
                             <div class="card">
                                 <!-- <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
                                     rel="noopener noreferrer" target="_blank"> -->
-                                    <img src="img/Hoka Mens Gaviota.jpg" class="card-img-top"
-                                        alt="Event 1 Image - Description of the event" loading="lazy">
+                                <img src="img/Hoka Mens Gaviota.jpg" class="card-img-top"
+                                    alt="Event 1 Image - Description of the event" loading="lazy">
                                 <!-- </a> -->
                                 <div class="card-body text-center">
                                     <!-- <a href="https://www.amazon.com/Hoka-Gaviota-Sneaker-Black-White/dp/B0C9CTBSR2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.ELr_BAasCpg2JNyXifT8PTPuDG1VaRSJb2BIE9UQo736k-4otnqRnrreupqldLxRj4UeurUQzi3M8oZADdK5_s6xTvEmN0LlSKfdEXZNtZ4i1f_Mzno-5BaKQ2oAGkY4RM0WWSYN2ifhdhsUqb3bMIXzFZVz1Mew9yLrEdXgXbydZFhQfhieL0DFRl30gCDIYkPQA7a0zWJ2v_qDxfPpOU2jBBPzYz4EZhd9dnkn74Trdx4H0H8WRndGih89gQvL-3ANxBWzlPmNZPahjxZROgOO-gUx8AVu4xWKb4-S48KZ2gG96ZdlcrVyWUwQOKJxLesTiqcG-2R35ywAREnnDbHLvMGfDyS3IIUkzfQL14qElQ-IuWG4fVHG0xpblZd7.7hYrot5udp5CH1xVcBiPItaIWBddabIFE0jv5hSjyHg&dib_tag=se&keywords=hoka%2Bmens&qid=1738344008&s=apparel&sr=1-3&th=1"
                                         rel="noopener noreferrer" target="_blank"
                                         class="btn btn-outline-light btn-primary">
                                         HOKA Men's Gaviota 5 Sneaker</a> -->
-
                                 </div>
-
                             </div>
 
-
                         </div>
+                        <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine>
+                        <script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
                             <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com" rel="noopener noreferrer" target="_blank">
