--- a/WomensCasualShoes.html
+++ b/WomensCasualShoes.html
@@ -54,37 +54,37 @@
     </header>
 
 
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Shoes.html">Shoes</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="ShoesNews.html">Shoes News</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="CharityWalks.html">Charity Walks</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Shoes.html">Shoes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ShoesNews.html">Shoes News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="About.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Main Content Section with Sidebars -->
     <div class="container">
@@ -101,6 +101,7 @@
                 <div class="title-section text-center  mb-5">
                     <h1>Women's Casual Shoes </h1>
                     <p class="subtitle">Page Under Construction</p>
+
                 </div>
                 <!-- Card Grid -->
                 <div class="container">
@@ -135,6 +136,8 @@
                                 </div>
                             </div>
                         </div>
+                        <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine>
+                        <script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
                             <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com" rel="noopener noreferrer" target="_blank">
