Added <a href> to Icons in cards of Shoes.html

--- a/Shoes.html
+++ b/Shoes.html
@@ -111,11 +111,13 @@
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
 
                             <div class="card">
+                                <a href="MensShoes.html">
                                 <div class="d-flex justify-content-center align-items-center">
                                     <img src="img/Male Symbol 24 pxl.svg" class="card-img-top svg-card-img"
                                         alt="Description of image">
                                     <!-- <span class="material-symbols-outlined material-icons">steps</span> -->
                                 </div>
+                            </a>
                                 <div class="card-body text-center">
                                     <a href="MensShoes.html" class="btn btn-outline-light btn-primary">Men's Shoes</a>
                                 </div>
@@ -124,12 +126,14 @@
                         </div>
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4">
                             <div class="card">
+                                <a href="WomensShoes.html">
                                 <div class="d-flex justify-content-center align-items-center">
 
                                     <img src="img/Female Symbol 24 pxl.svg" class="card-img-top svg-card-img material-icons"
                                     alt="Description of image">                                 
 
                                 </div>
+                            </a>
                                 <div class="card-body text-center">
                                     <a href="WomensShoes.html" class="btn  btn-outline-light btn-primary">Woman's Shoes</a>
                                 </div>
