Added a permisive CSP to accomodate the rss.app wideget on Shoes News and removed the widget from all other pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' cdn.jsdelivr.net; style-src 'self' cdn.jsdelivr.net; img-src 'self' data:;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
 
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="no-referrer-when-downgrade">
@@ -39,7 +39,7 @@
     <div class="container text-center">
       <h1 class="m-0">
         <a href="index.html" title="Home">
-          <img src="img/Miami-Walking-Logo-SVG.svg" alt="Website Logo" style="height: 50px;">
+          <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo" >
         </a>
       </h1>
     </div>
