--- a/MensCasualShoes.html
+++ b/MensCasualShoes.html
@@ -4,52 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
+  
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="referrer" content="no-referrer-when-downgrade">
     <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
-    <title>Men's Casual Shoes - MiamiWalking.com - Miami</title>
+  
+    <title>Home Page - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
-    <!-- Bootstrap CSS CDN -->
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-
-
     <link href="styles.css" rel="stylesheet">
-
+  
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N90RMFHVNE"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-N90RMFHVNE');
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+  
+      gtag('config', 'G-N90RMFHVNE');
     </script>
     <script>
-        if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
-            window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
-        }
+      if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
+        window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+      }
     </script>
-
-
-</head>
-
-
-<body>
-
+  </head>
+  
+  <body>
     <!-- Header Section -->
     <header class="bg-white py-3">
-        <div class="container text-center">
-            <h1 class="m-0">
-                <a href="index.html" title="Home">
-                    <img src="img/Miami-Walking-Logo-SVG.svg" alt="Website Logo" style="height: 50px;">
-                </a>
-            </h1>
-        </div>
+      <div class="container text-center">
+        <h1 class="m-0">
+          <a href="index.html" title="Home">
+            <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo" >
+          </a>
+        </h1>
+      </div>
     </header>
 
 
@@ -137,7 +130,7 @@
 
                             </div>
                         </div>
-                        <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
+                        
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
                             <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com" rel="noopener noreferrer" target="_blank">
