Removed rss.app and Shoes News from all navbars

--- a/ShoesNews.html
+++ b/ShoesNews.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta http-equiv="Content-Security-Policy" content="default-src *; script-src * 'unsafe-inline' 'unsafe-eval'; style-src * 'unsafe-inline';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
 
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta name="referrer" content="no-referrer-when-downgrade">
@@ -64,9 +64,9 @@
           <li class="nav-item">
             <a class="nav-link" href="Shoes.html">Shoes</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="ShoesNews.html">Shoes News</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="About.html">About</a>
           </li>
@@ -92,9 +92,10 @@
 
                 <div class="title-section text-center  mb-5">
                     <h1>Shoes News </h1>
+                    <p class="subtitle">Page Under Construction</p>
                 </div>
 
-                <rssapp-magazine id="QJ0tXkylx7Iq9z0q"></rssapp-magazine><script src="https://widget.rss.app/v1/magazine.js" type="text/javascript" async></script>
+                
                 <!-- Card Grid -->
        
             </div>
