All footer nav links lead to inde.html

--- a/About.html
+++ b/About.html
@@ -115,12 +115,12 @@
           <h5>Navigation</h5>
           <ul class="nav flex-column">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
-            <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
-            <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
-            <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
-            <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="Index.html" class="nav-link">Food & Beverage</a></li>
+            <li class="nav-item"><a href="Index.html" class="nav-link">Videos</a></li>
+            <li class="nav-item"><a href="Index.html" class="nav-link">News</a></li>
+            <li class="nav-item"><a href="Index.html" class="nav-link">Events</a></li>
+            <li class="nav-item"><a href="Index.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="Index.html" class="nav-link">Contact</a></li>
           </ul>
         </div>
 
