--- a/WomensCasualShoes.html
+++ b/WomensCasualShoes.html
@@ -4,45 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
-  
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
+    <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta name="referrer" content="no-referrer-when-downgrade">
-    <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+    <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
-  
     <title>Home Page - MiamiWalking.com - Miami</title>
     <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-  
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N90RMFHVNE"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-  
-      gtag('config', 'G-N90RMFHVNE');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-N90RMFHVNE');
     </script>
     <script>
-      if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
-        window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
-      }
+        if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
+            window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+        }
     </script>
-  </head>
-  
-  <body>
+</head>
+
+<body>
     <!-- Header Section -->
     <header class="bg-white py-3">
-      <div class="container text-center">
-        <h1 class="m-0">
-          <a href="index.html" title="Home">
-            <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo" >
-          </a>
-        </h1>
-      </div>
+        <div class="container text-center">
+            <h1 class="m-0">
+                <a href="index.html" title="Home">
+                    <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo">
+                </a>
+            </h1>
+        </div>
     </header>
 
 
@@ -128,7 +128,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                         <div class="col-lg-5 col-md-6 col-sm-12 mb-4 d-block d-lg-none">
                             <!-- <div class="card mb-3">
                                 <a href="https://www.thewalkingcompany.com" rel="noopener noreferrer" target="_blank">
