--- a/WomensShoes.html
+++ b/WomensShoes.html
@@ -2,36 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
-  
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta name="referrer" content="no-referrer-when-downgrade">
-    <meta http-equiv="Feature-Policy" content="geolocation 'none'; microphone 'none'; camera 'none'">
-    <meta http-equiv="Cache-Control" content="max-age=31536000">
-  
-    <title>Home Page - MiamiWalking.com - Miami</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
-    <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-  
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N90RMFHVNE"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() { dataLayer.push(arguments); }
-      gtag('js', new Date());
-  
-      gtag('config', 'G-N90RMFHVNE');
-    </script>
-    <script>
-      if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
-        window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
-      }
-    </script>
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
+  <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+  <meta http-equiv="X-Frame-Options" content="sameorigin">
+  <meta http-equiv="Cache-Control" content="max-age=31536000">
+  <title>Home Page - MiamiWalking.com - Miami</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N90RMFHVNE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-N90RMFHVNE');
+  </script>
+  <script>
+    if (window.location.protocol !== "https:" && window.location.hostname !== "localhost" && window.location.port !== "5500") {
+      window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+    }
+  </script>
+</head>
   
   <body>
     <!-- Header Section -->
