removed hero from index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="col-12 col-lg-8">
         <div class="hero-image d-lg-block d-none mb-5">
           <!-- Hero Image Banner -->
-          <img src="img/pexels-runffwpu-9857560.jpg" alt="Hero Image" class="img-fluid">
+          <!-- <img src="img/pexels-runffwpu-9857560.jpg" alt="Hero Image" class="img-fluid"> -->
         </div>
         <div class="title-section text-center d-lg-block d-none mb-5">
           <h1>Welcome to MiamiWalking.com </h1>
