Added ShoesNews.html and ShoesNews2025 and first article

--- a/ShoesNews.html
+++ b/ShoesNews.html
@@ -39,7 +39,7 @@
     <div class="container text-center">
       <h1 class="m-0">
         <a href="index.html" title="Home">
-          <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo" >
+          <img src="img/Miami-Walking-Logo-SVG.svg" class="logo" alt="Website Logo">
         </a>
       </h1>
     </div>
@@ -78,90 +78,93 @@
     </div>
   </nav>
 
-    <!-- Main Content Section with Sidebars -->
-    <div class="container">
-        <div class="row mt-5">
-            <!-- Left Sidebar -->
-            <div class="col-lg-2 d-none d-lg-block">
-                <!-- Keeps sidebar space occuppied -->
-            </div>
+  <!-- Main Content Section with Sidebars -->
+  <div class="container">
+    <div class="row mt-5">
+      <!-- Left Sidebar -->
+      <div class="col-lg-2 d-none d-lg-block">
+        <!-- Keeps sidebar space occuppied -->
+      </div>
 
-            <!-- Main Section -->
+      <!-- Main Section -->
 
-            <div class="col-12 col-lg-8">
+      <div class="col-12 col-lg-8">
 
-                <div class="title-section text-center  mb-5">
-                    <h1>Shoes News </h1>
-                    <p class="subtitle">Page Under Construction</p>
-                </div>
-
-                
-                <!-- Card Grid -->
-       
-            </div>
-            <!-- Right Sidebar -->
-            <div class="col-lg-2 d-none d-lg-block">
-                <!-- Keeps sidebar space occuppied -->
-            </div>
+        <div class="title-section text-center  mb-5">
+          <h1>Shoes News </h1>
+          <!-- <p class="subtitle">Page Under Construction</p> -->
         </div>
+        <div>
+          <a href="ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html" class="subtitle">
+            <p >Roger Federer Joins Elmo to Unveil On's Logo in New Super Bowl Commercial</p>
+          </a>
+
+
+
+
+          <!-- Card Grid -->
+
+        </div>
+        <!-- Right Sidebar -->
+        <div class="col-lg-2 d-none d-lg-block">
+          <!-- Keeps sidebar space occuppied -->
+        </div>
+      </div>
     </div>
 
     <footer class="bg-light text-dark mt-5 py-5">
-        <div class="container">
-            <div class="row">
-                <!-- Navigation Links -->
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <h5>Navigation</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
-                        <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
-                        <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
-                        <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
-                        <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
-                    </ul>
-                </div>
+      <div class="container">
+        <div class="row">
+          <!-- Navigation Links -->
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5>Navigation</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+              <li class="nav-item"><a href="Food&Beverage.html" class="nav-link">Food & Beverage</a></li>
+              <li class="nav-item"><a href="Videos.html" class="nav-link">Videos</a></li>
+              <li class="nav-item"><a href="News.html" class="nav-link">News</a></li>
+              <li class="nav-item"><a href="Events.html" class="nav-link">Events</a></li>
+              <li class="nav-item"><a href="About.html" class="nav-link">About</a></li>
+              <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+            </ul>
+          </div>
 
-                <!-- Company Info -->
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <h5>Company</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Careers</a></li>
-                        <li class="nav-item"><a href="index.html" class="nav-link">Blog</a></li>
-                        <li class="nav-item"><a href="index.html" class="nav-link">Terms of Service</a></li>
-                        <li class="nav-item"><a href="index.html" class="nav-link">Privacy Policy</a></li>
-                    </ul>
-                </div>
+          <!-- Company Info -->
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5>Company</h5>
+            <ul class="nav flex-column">
+              <li class="nav-item"><a href="index.html" class="nav-link">Careers</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Blog</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Terms of Service</a></li>
+              <li class="nav-item"><a href="index.html" class="nav-link">Privacy Policy</a></li>
+            </ul>
+          </div>
 
-                <!-- Contact Info -->
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <h5>Contact Us</h5>
-                    <address>
-                        <!-- <p>123 Example Street<br>Anytown, USA 12345</p> -->
-                        <p>Email: <a href="mailto:info@william305.com">info@MiamiWalking.com</a></p>
-                        <!-- <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p> -->
-                    </address>
-                </div>
+          <!-- Contact Info -->
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5>Contact Us</h5>
+            <address>
+              <!-- <p>123 Example Street<br>Anytown, USA 12345</p> -->
+              <p>Email: <a href="mailto:info@william305.com">info@MiamiWalking.com</a></p>
+              <!-- <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p> -->
+            </address>
+          </div>
 
-                <!-- Social Media -->
-                <div class="col-lg-3 col-md-6 mb-4">
-                    <h5>Follow Us</h5>
-                    <div class="d-flex justify-content-start">
-                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                                class="fab fa-x-twitter"></i></a>
-                        <!-- Changed this line -->
-                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                                class="fab fa-linkedin-in"></i></a>
-                        <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
-                                class="fab fa-instagram"></i></a>
-                    </div>
-                    <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
-                </div>
+          <!-- Social Media -->
+          <div class="col-lg-3 col-md-6 mb-4">
+            <h5>Follow Us</h5>
+            <div class="d-flex justify-content-start">
+              <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-x-twitter"></i></a>
+              <!-- Changed this line -->
+              <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i
+                  class="fab fa-linkedin-in"></i></a>
+              <a href="https://x.com/MiamiWalking305" target="_blank" class="me-3"><i class="fab fa-instagram"></i></a>
             </div>
+            <p class="mt-3">© 2024 MiamiWalking.com All rights reserved.</p>
+          </div>
         </div>
+      </div>
     </footer>
 
     <!-- Bootstrap JS and Popper.js CDN -->
@@ -169,18 +172,18 @@
     <script src="script.js"></script>
     <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
-        if ('serviceWorker' in navigator) {
-          window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/sw.js').then(function(registration) {
-              // Registration was successful
-              console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            }, function(err) {
-              // registration failed :(
-              console.log('ServiceWorker registration failed: ', err);
-            });
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function () {
+          navigator.serviceWorker.register('/sw.js').then(function (registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, function (err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
           });
-        }
-      </script>
+        });
+      }
+    </script>
 
 </body>
 
