Change ShoesNews.html in header

--- a/ShoesNews.html
+++ b/ShoesNews.html
@@ -12,7 +12,7 @@
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
-  <title>Home Page - MiamiWalking.com - Miami</title>
+  <title>Shoes News - MiamiWalking.com - Miami</title>
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
