Added new ShoesNews story and path to js in each story

--- a/ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html
+++ b/ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html
@@ -181,7 +181,7 @@
     </footer>
 
     <!-- Bootstrap JS and Popper.js CDN -->
-    <script src="bootstrap.min.js"></script>
+    <script src="../../bootstrap.min.js"></script>
     <script src="script.js"></script>
     <!-- <script async data-id="101472771" src="//static.getclicky.com/js"></script> -->
     <script>
