--- a/ShoesNews.html
+++ b/ShoesNews.html
@@ -95,16 +95,20 @@
           <!-- <p class="subtitle">Page Under Construction</p> -->
         </div>
         <div>
-          <a href="ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html" class="subtitle">
+          <a href="ShoesNews20205/ShoesNewsFeb.2025/RogerFedererAndElmo.html" class="subtitle text-center">
             <p >Roger Federer Joins Elmo to Unveil On's Logo in New Super Bowl Commercial</p>
           </a>
-
-
-
-
-          <!-- Card Grid -->
-
         </div>
+
+        <div>
+          <a href="ShoesNews20205/ShoesNewsFeb.2025/FootwearNYfashionWeek.html" class="subtitle text-center">
+            <p >Footwear New York Fashion Week 2025</p>
+          </a>
+        </div>
+
+
+
+
         <!-- Right Sidebar -->
         <div class="col-lg-2 d-none d-lg-block">
           <!-- Keeps sidebar space occuppied -->
