Added placeholder canonical link in head of all pages. Now need to customize each one.

--- a/ShoesNews20205/ShoesNewsFeb.2025/FootwearNYfashionWeek.html
+++ b/ShoesNews20205/ShoesNewsFeb.2025/FootwearNYfashionWeek.html
@@ -13,6 +13,7 @@
     <meta http-equiv="X-Frame-Options" content="sameorigin">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
     <title>Footwear New York Fashion Week 2025 - MiamiWalking.com - Miami</title>
+    <link rel="canonical" href="https://miamiwalking.com/ShoesNews20205/ShoesNewsFeb.2025/FootwearNYfashionWeek.html">
     <link rel="icon" type="image/png" sizes="16x16" href="../../img/Favicon Miami Walking PNG.png">
     <link href="../../bootstrap.min.css" rel="stylesheet">
     <link href="../../styles.css" rel="stylesheet">
