--- a/About.html
+++ b/About.html
@@ -12,8 +12,8 @@
   <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
   <meta http-equiv="X-Frame-Options" content="sameorigin">
   <meta http-equiv="Cache-Control" content="max-age=31536000">
-
   <title>Home Page - MiamiWalking.com - Miami</title>
+  <link rel="canonical" href="https://example.com/nyfw-fall-2025-highlights">
   <link rel="icon" type="image/png" sizes="16x16" href="img/Favicon Miami Walking PNG.png">
   <link href="bootstrap.min.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
