Changed the message on the 404 page

--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
             <div class="col-12 col-lg-8">
 
                 <div class="title-section text-center  mb-5">
-                    <h1>404 - Page Not Found </h1>
+                    <h1>404 - This Page Does Not Exist </h1>
                     <!-- <p class="subtitle">Page Under Construction</p> -->
                 </div>
                
